Update for async-interop merge and other Amp changes; changed namespace to ByteStream

--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,12 @@
         "amphp/amp": "dev-master as 2.0"
     },
     "require-dev": {
-        "amphp/loop": "dev-master",
         "phpunit/phpunit": "^5",
         "friendsofphp/php-cs-fixer": "~1.9"
     },
     "autoload": {
         "psr-4": {
-            "Amp\\Stream\\": "lib/"
+            "Amp\\ByteStream\\": "lib/"
         },
         "files": [
             "lib/functions.php",
@@ -39,7 +38,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Amp\\Stream\\Test\\": "test/"
+            "Amp\\ByteStream\\Test\\": "test/"
         }
     }
 }
