--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "amphp/amp": "dev-master as 2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5",
+        "amphp/phpunit-util": "dev-master",
+        "phpunit/phpunit": "^6",
         "friendsofphp/php-cs-fixer": "~1.9"
     },
     "autoload": {
