--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ matrix:
   fast_finish: true
 
 before_script:
-  - composer self-update
-  - composer install
+  # --ignore-platform-reqs, because https://github.com/FriendsOfPHP/PHP-CS-Fixer/pull/2722
+  - composer update -n --prefer-dist --ignore-platform-reqs
+  - composer show
 
 script:
   - phpdbg -qrr vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
