--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,17 @@ matrix:
   fast_finish: true
 
 before_script:
-  - composer self-update
-  - composer install
+  # --ignore-platform-reqs, because https://github.com/FriendsOfPHP/PHP-CS-Fixer/pull/2722
+  - composer update -n --prefer-dist --ignore-platform-reqs
+  - composer require satooshi/php-coveralls dev-master --ignore-platform-reqs
 
 script:
   - phpdbg -qrr vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
-  - php vendor/bin/php-cs-fixer --diff --dry-run -v fix
+  - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
-  - composer require satooshi/php-coveralls:dev-master
   - php vendor/bin/coveralls -v
 
 cache:
   directories:
-    - $HOME/.composer/cache
+    - $HOME/.composer/cache/files
