--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -34,6 +34,7 @@ return PhpCsFixer\Config::create()
     ])
     ->setFinder(
         PhpCsFixer\Finder::create()
+            ->in(__DIR__ . "/examples")
             ->in(__DIR__ . "/lib")
             ->in(__DIR__ . "/test")
     );
