--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,18 @@
 {
     "name": "amphp/byte-stream",
-    "homepage": "https://github.com/amphp/byte-stream",
+    "homepage": "http://amphp.org/byte-stream",
     "description": "A stream abstraction to make working with non-blocking I/O simple.",
     "support": {
-        "issues": "https://github.com/amphp/byte-stream/issues"
+        "issues": "https://github.com/amphp/byte-stream/issues",
+        "irc": "irc://irc.freenode.org/amphp"
     },
     "keywords": [
         "stream",
         "async",
         "non-blocking",
-        "amp"
+        "amp",
+        "amphp",
+        "io"
     ],
     "license": "MIT",
     "authors": [
@@ -22,19 +25,17 @@
             "email": "me@kelunik.com"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {
-        "amphp/amp": "^2.0"
+        "amphp/amp": "^2"
     },
     "require-dev": {
-        "amphp/phpunit-util": "dev-master",
+        "amphp/phpunit-util": "^1",
         "phpunit/phpunit": "^6",
         "friendsofphp/php-cs-fixer": "^2.3"
     },
     "autoload": {
         "psr-4": {
-            "Amp\\ByteStream\\": "lib/"
+            "Amp\\ByteStream\\": "lib"
         },
         "files": [
             "lib/functions.php"
@@ -42,7 +43,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Amp\\ByteStream\\Test\\": "test/"
+            "Amp\\ByteStream\\Test\\": "test"
         }
     }
 }
