Define target platform in composer.json and fix .travis.yml

--- a/composer.json
+++ b/composer.json
@@ -45,5 +45,10 @@
         "psr-4": {
             "Amp\\ByteStream\\Test\\": "test"
         }
+    },
+    "config": {
+        "platform": {
+            "php": "7.0.0"
+        }
     }
 }
