--- a/.travis.yml
+++ b/.travis.yml
@@ -16,16 +16,13 @@ matrix:
 env:
   - AMP_DEBUG=true
 
-before_install:
-  - phpenv config-rm xdebug.ini || echo "No xdebug config."
-
 install:
   - composer update -n --prefer-dist
   - wget https://github.com/php-coveralls/php-coveralls/releases/download/v1.0.2/coveralls.phar
   - chmod +x coveralls.phar
 
 script:
-  - phpdbg -qrr vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
+  - vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
