--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,14 @@
     ],
     "require": {
         "php": ">=7.2",
-        "ext-fiber": "*",
-        "amphp/amp": "^2",
-        "amphp/green-thread": "dev-master"
+        "ext-task": "*",
+        "amphp/amp": "dev-ext-task"
     },
     "require-dev": {
         "amphp/phpunit-util": "^1",
         "phpunit/phpunit": "^6",
-        "friendsofphp/php-cs-fixer": "^2.3"
+        "friendsofphp/php-cs-fixer": "^2.3",
+        "concurrent-php/task": "1.0"
     },
     "autoload": {
         "psr-4": {
@@ -54,8 +54,18 @@
             "php": "7.2.0"
         }
     },
-    "repositories": [{
-        "type": "vcs",
-        "url": "https://github.com/amphp/green-thread"
-    }]
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "concurrent-php/task",
+                "version": "1.0",
+                "source": {
+                    "url": "https://github.com/concurrent-php/task",
+                    "type": "git",
+                    "reference": "origin/master"
+                }
+            }
+        }
+    ]
 }
