--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,12 @@
     ],
     "require": {
         "php": ">=7.2",
-        "ext-task": "*",
-        "amphp/amp": "dev-ext-task"
+        "amphp/amp": "dev-ext-async"
     },
     "require-dev": {
-        "amphp/phpunit-util": "^1",
+        "amphp/phpunit-util": "dev-ext-async",
         "phpunit/phpunit": "^6",
-        "friendsofphp/php-cs-fixer": "^2.3",
-        "concurrent-php/task": "1.0"
+        "friendsofphp/php-cs-fixer": "^2.3"
     },
     "autoload": {
         "psr-4": {
@@ -54,18 +52,6 @@
             "php": "7.2.0"
         }
     },
-    "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "concurrent-php/task",
-                "version": "1.0",
-                "source": {
-                    "url": "https://github.com/concurrent-php/task",
-                    "type": "git",
-                    "reference": "origin/master"
-                }
-            }
-        }
-    ]
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
