--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "amphp/phpunit-util": "^1",
         "phpunit/phpunit": "^6",
         "friendsofphp/php-cs-fixer": "^2.3",
-        "amphp/php-cs-fixer-config": "dev-master"
+        "amphp/php-cs-fixer-config": "dev-master",
+        "infection/infection": "^0.9.3"
     },
     "autoload": {
         "psr-4": {
