--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,13 @@
-example export-ignore
+examples export-ignore
 test export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
 phpunit.xml.dist export-ignore
-docs/asset export-ignore
+docs export-ignore
+.editorconfig export-ignore
+.gitmodules export-ignore
+.php_cs.dist export-ignore
+infection.json.dist export-ignore
+middle export-ignore
+README.md export-ignore
