--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,11 @@
     },
     "require-dev": {
         "amphp/phpunit-util": "^1",
-        "phpunit/phpunit": "^6",
+        "phpunit/phpunit": "^6 || ^7 || ^8",
         "friendsofphp/php-cs-fixer": "^2.3",
         "amphp/php-cs-fixer-config": "dev-master",
-        "infection/infection": "^0.9.3"
+        "vimeo/psalm": "^3.9@dev",
+        "jetbrains/phpstorm-stubs": "^2019.3"
     },
     "autoload": {
         "psr-4": {
@@ -48,9 +49,9 @@
             "Amp\\ByteStream\\Test\\": "test"
         }
     },
-    "config": {
-        "platform": {
-            "php": "7.0.0"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
         }
     }
 }
