--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
-sudo: false
-
+os: linux
+dist: xenial
 language: php
 
 php:
-  - 7.0
   - 7.1
   - 7.2
   - 7.3
   - 7.4
   - nightly
 
-matrix:
+jobs:
   allow_failures:
     - php: nightly
   fast_finish: true
@@ -19,18 +18,16 @@ env:
   - AMP_DEBUG=true
 
 install:
-  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then composer remove --dev vimeo/psalm; fi
   - composer update -n --prefer-dist
-  - wget https://github.com/php-coveralls/php-coveralls/releases/download/v1.0.2/coveralls.phar
-  - chmod +x coveralls.phar
+  - wget https://github.com/php-coveralls/php-coveralls/releases/download/v2.2.0/php-coveralls.phar
 
 script:
   - vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
-  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then echo "Skipped psalm static analysis"; else vendor/bin/psalm; fi
+  - vendor/bin/psalm.phar
 
 after_script:
-  - ./coveralls.phar -v
+  - php php-coveralls.phar -v
 
 cache:
   directories:
