--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,11 @@ jobs:
 
           - operating-system: 'windows-latest'
             php-version: '8.0'
+            composer-flags: '--ignore-platform-req=php'
 
           - operating-system: 'macos-latest'
             php-version: '8.0'
+            composer-flags: '--ignore-platform-req=php'
 
     name: PHP ${{ matrix.php-version }} on ${{ matrix.operating-system }}
 
