--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,8 @@
 examples export-ignore
 test export-ignore
-.gitattributes export-ignore
-.gitignore export-ignore
-.travis.yml export-ignore
+/.* export-ignore
 phpunit.xml.dist export-ignore
+psalm.xml export-ignore
 docs export-ignore
-.editorconfig export-ignore
-.gitmodules export-ignore
-.php_cs.dist export-ignore
 infection.json.dist export-ignore
 README.md export-ignore
