--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,3 +77,11 @@ jobs:
         env:
           PHP_CS_FIXER_IGNORE_ENV: 1
         run: vendor/bin/php-cs-fixer --diff --dry-run -v fix
+
+      - name: Install composer-require-checker
+        run: php -r 'file_put_contents("composer-require-checker.phar", file_get_contents("https://github.com/maglnet/ComposerRequireChecker/releases/download/3.7.0/composer-require-checker.phar"));'
+        if: runner.os != 'Windows' && matrix.composer-require-checker-version != 'none'
+
+      - name: Run composer-require-checker
+        run: php composer-require-checker.phar check composer.json --config-file $PWD/composer-require-check.json
+        if: runner.os != 'Windows' && matrix.composer-require-checker-version != 'none'
