--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
     "require-dev": {
         "amphp/phpunit-util": "^3",
         "phpunit/phpunit": "^9",
-        "friendsofphp/php-cs-fixer": "^2.19",
-        "amphp/php-cs-fixer-config": "dev-master",
+        "amphp/php-cs-fixer-config": "^2-dev",
         "psalm/phar": "^4.15",
         "jetbrains/phpstorm-stubs": "^2019.3"
     },
