--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,9 @@
         "php": ">=8",
         "amphp/amp": "^3",
         "amphp/pipeline": "^1",
+        "amphp/parser": "^1",
+        "amphp/serialization": "^1",
+        "amphp/sync": "^2-dev",
         "revolt/event-loop": "^0.2.0"
     },
     "require-dev": {
@@ -37,8 +40,8 @@
         "psalm/phar": "^4.15",
         "jetbrains/phpstorm-stubs": "^2019.3"
     },
-    "minimum-stability": "beta",
-    "prefer-stable": true,
+    "minimum-stability": "dev",
+    "prefer-stable": false,
     "autoload": {
         "psr-4": {
             "Amp\\ByteStream\\": "src"
