--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "amphp/pipeline": "^1",
         "amphp/parser": "^1",
         "amphp/serialization": "^1",
-        "amphp/sync": "^2-dev",
+        "amphp/sync": "^2",
         "revolt/event-loop": "^0.2.0"
     },
     "require-dev": {
