--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "php": ">=8.1",
         "amphp/amp": "^3",
         "amphp/pipeline": "^1",
-        "amphp/parser": "^1",
+        "amphp/parser": "^1.1",
         "amphp/serialization": "^1",
         "amphp/sync": "^2",
         "revolt/event-loop": "^1 || ^0.2.3"
@@ -36,12 +36,10 @@
     "require-dev": {
         "amphp/phpunit-util": "^3",
         "phpunit/phpunit": "^9",
-        "amphp/php-cs-fixer-config": "^2-dev",
+        "amphp/php-cs-fixer-config": "^2",
         "psalm/phar": "^5.4",
         "jetbrains/phpstorm-stubs": "^2019.3"
     },
-    "minimum-stability": "beta",
-    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Amp\\ByteStream\\": "src"
